plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'hello'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
tasks.named('processResources') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from('src/main/resources') {
        include 'project-adcanvas-7198154f5844.json'
    }
}
repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.projectlombok:lombok:1.18.30'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    annotationProcessor 'org.projectlombok:lombok'

    //Swagger-Ui 설정
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    //webflux
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    //fal.ai 설정
    implementation 'ai.fal.client:fal-client:0.7.1'
    //caffeine 설정(임시 캐시)
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    //ffmpeg 설정
    implementation "net.bramp.ffmpeg:ffmpeg:0.7.0"
    //gcs
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-starter', version: '1.2.5.RELEASE'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-storage', version: '1.2.5.RELEASE'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.18.0'

}

tasks.named('test') {
    useJUnitPlatform()
}
